<resources>
    <string name="app_name">Worki</string>
    <string name="title_activity_admin_login">AdminLogin</string>
    <string name="home">Home</string>
    <string name="username">Full Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="admin">Admin</string>
    <string name="no_messages">No Messages</string>
    <string name="profile">Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="browse">Browse</string>
    <string name="name">Name:</string>
    <string name="no_users">No Users</string>
    <string name="send_message">Send Message</string>
    <string name="select_user">Select User</string>
    <string name="select_message">Select Message (optional)</string>
    <string name="url_optional">Url (optional)</string>
    <string name="enter_message">Enter Message</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="update">Update Location</string>
    <string name="rad">Radius (meters)</string>
    <string name="settings">Settings</string>
    <string name="user_profile">User Profile</string>
    <string name="add_note">Add Note</string>
    <string name="status">Status</string>
    <string name="messages">Messages</string>
    <string name="notes">Notes</string>
    <string name="logout">Logout</string>
    <string name="username1">Name (case sensitive)</string>
    <string name="loading">Loading</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="title">Title</string>
    <string name="sfsfsfs">Message Details</string>
    <string name="message_templates">Message Templates</string>
    <string name="add_template">Add Template</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="username2">Username</string>
    <string name="contact_us">Contact Us</string>
    <string name="email">Email (optional)</string>
    <string name="ideas">Ideas for improvement, complaints, feel free to tell us all about it</string>
    <string name="feedback">Feedback</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="no_feedbacks">No Feedbacks</string>
</resources>
