<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ideas" />
            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:padding="10dp"
                android:gravity="top"
                android:textSize="14sp"
                android:hint="@string/title"
                android:background="@drawable/field"
                android:inputType="text"/>
            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:textSize="14sp"
                android:gravity="top"
                android:hint="@string/enter_message"
                android:singleLine="false"
                android:background="@drawable/field"
                android:inputType="textMultiLine"/>
            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:padding="10dp"
                android:gravity="top"
                android:textSize="14sp"
                android:hint="@string/email"
                android:background="@drawable/field"
                android:inputType="textEmailAddress"/>
            <Button
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorPrimary"
                android:text="@string/send_message"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>
</RelativeLayout>