<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SendMessage">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:id="@+id/sel_user"
                android:layout_width="match_parent"
                android:background="@drawable/field"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="14sp"
                android:hint="@string/select_user"
                android:paddingRight="10dp"
                android:layout_height="45dp"/>
            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:id="@+id/sel_message"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:background="@drawable/field"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:textSize="14sp"
                android:paddingEnd="10dp"
                android:hint="@string/select_message"
                android:paddingRight="10dp"
                android:layout_height="45dp"/>
            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:textSize="14sp"
                android:gravity="top"
                android:hint="@string/enter_message"
                android:singleLine="false"
                android:background="@drawable/field"
                android:inputType="textMultiLine"/>
            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:padding="10dp"
                android:gravity="top"
                android:textSize="14sp"
                android:hint="@string/url_optional"
                android:background="@drawable/field"
                android:inputType="textUri"/>
            <Button
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorPrimary"
                android:text="@string/send_message"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>