<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SendMessage">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginTop="0dp"
                android:id="@+id/lat"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="14sp"
                android:padding="10dp"
                android:gravity="top"
                android:hint="@string/lat"
                android:background="@drawable/field"
                android:inputType="numberDecimal"/>
            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/lng"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:padding="10dp"
                android:gravity="top"
                android:textSize="14sp"
                android:hint="@string/lng"
                android:background="@drawable/field"
                android:inputType="numberDecimal"/>
            <EditText
                android:layout_marginTop="15dp"
                android:id="@+id/radius"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:padding="10dp"
                android:gravity="top"
                android:textSize="14sp"
                android:hint="@string/rad"
                android:background="@drawable/field"
                android:inputType="number"/>
            <Button
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorPrimary"
                android:text="@string/update"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>