<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white">
    <LinearLayout
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/photo"/>
        <Button
            android:id="@+id/edit"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginRight="20dp"
            android:text="@string/edit"
            android:background="@color/gray"
            android:textColor="@android:color/white"/>
        <LinearLayout
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/name"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saifal Nadeem" />
            <TextView
                android:id="@+id/admin_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saifal Nadeem" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16sp"
                android:id="@+id/status"
                android:textColor="@color/green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Active" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/messages"
                android:layout_width="0dp"
                android:text="@string/messages"
                android:textColor="@color/white"
                android:background="@drawable/btn_sel"
                android:layout_weight="0.5"
                android:layout_height="45dp" />
            <Button
                android:id="@+id/notes"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/notes"
                android:layout_width="0dp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/btn_unsel"
                android:layout_weight="0.5"
                android:layout_height="45dp" />
        </LinearLayout>
        <Button
            android:id="@+id/send_msg"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/send_message"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
        <Button
            android:visibility="gone"
            android:id="@+id/add_note"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/add_note"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
        <ListView
            android:layout_marginTop="10dp"
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null">
        </ListView>
    </LinearLayout>
    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>
</RelativeLayout>