<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile"/>
        <Button
            android:id="@+id/browse"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginRight="20dp"
            android:text="@string/browse"
            android:background="@color/gray"
            android:textColor="@android:color/white"/>
        <LinearLayout
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />
            <TextView
                android:id="@+id/name"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saifal Nadeem" />
        </LinearLayout>
        <Button
            android:id="@+id/update"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/update_profile"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</RelativeLayout>