<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/worki"/>
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/darker_gray"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/username"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/username2"
                android:gravity="center"
                android:textSize="16sp"
                android:background="@color/light_gray"
                android:inputType="textEmailAddress"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/darker_gray"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/password"
                android:textSize="16sp"
                android:gravity="center"
                android:background="@color/light_gray"
                android:inputType="textPassword"/>
        </LinearLayout>
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
    </LinearLayout>
    <ProgressBar
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>
</RelativeLayout>